--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   "dependencies": {
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/stack": "^7.1.2",
+    "@tamagui/babel-plugin": "^1.125.24",
+    "@tamagui/config": "^1.125.24",
+    "@tamagui/core": "^1.125.24",
     "expo": "~52.0.38",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
-    "react-native": "0.76.7"
+    "react-native": "0.76.7",
+    "tamagui": "^1.125.24"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
