--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.7",
-    "tamagui": "^1.125.24"
+    "tamagui": "^1.125.24",
+    "expo-image-picker": "~16.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
